old/signinserver_deploymen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signinserver-deployment
  namespace: signinserver
  labels:
    app: signinserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: signinserver
  template:
    metadata:
      labels:
        app: signinserver
    spec:
      containers:
      - name: signinserver
        image: mpsean/signin-server
        ports:
        - containerPort: 3000
