old/frontend1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend1-deployment
  namespace: tenant-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend1
  template:
    metadata:
      labels:
        app: frontend1
    spec:
      containers:
      - name: frontend1-container
        image: mpsean/frontend1:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend1-service
  namespace: tenant-a
spec:
  type: NodePort # internal only
  selector:
    app: frontend1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081   # any port 30000-32767
