old/frontend2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend2-deployment
  namespace: tenant-b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend2
  template:
    metadata:
      labels:
        app: frontend2
    spec:
      containers:
      - name: frontend2-container
        image: mpsean/frontend2:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend2-service
  namespace: tenant-b
spec:
  type: NodePort # internal only
  selector:
    app: frontend2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30082   # any port 30000-32767
