old/traefik-route-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: t1-route
  namespace: tenant-a
spec:
  entryPoints:
    - web  # This matches Traefik's port 80
  routes:
  - match: Host(`tenanta.hmmbird.xyz`)
    kind: Rule
    services:
    - name: frontend1-service
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: t2-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`tenantb.hmmbird.xyz`)
    kind: Rule
    services:
    - name: frontend2-service
      port: 80
